[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "viper-env"
version = "0.0.1"
description = "Environment for the 2026 VIPER Summer School"
requires-python = ">=3.11"

dependencies = [
    "enterprise-pulsar",
    "enterprise-extensions",
    "la-forge",
    "tqdm",
    "jupyterlab",
    "ipykernel",
    "notebook",
    "defiant",
    "cython<3.0,>=0.29",
    "holodeck-gw",
    "jug-timing",
    "numba>=0.60",
    "llvmlite>=0.43",
    "numpy",
]

[tool.uv.sources]
defiant = { git = "https://github.com/GersbachKa/defiant" }
holodeck-gw = { git = "https://github.com/nanograv/holodeck", branch = "dev" }
jug-timing = { git = "https://github.com/MattTMiles/jug.git", branch = "test_dep" }

# holodeck-gw builds with setuptools + Cython + numpy but does not declare them
# as build dependencies. Inject them into uv's isolated build environment so the
# build backend can find them. (Do NOT also set no-build-isolation-package here:
# that disables the isolated env these deps are installed into, which breaks the
# build with "ModuleNotFoundError: No module named 'setuptools'".)
[tool.uv.extra-build-dependencies]
holodeck-gw = ["setuptools", "wheel", "numpy"]

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false
